--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
                 <img src="img/1.webp" alt="Grupo Octor">
             </div>
             <div class="home-description">
-                <h1>TÁ NO AR O SITE DA ONABET</h1>
-                <P>#VEMPARAAMELHOR</P>
+                <h1><span style="color: rgb(255, 0, 0);">OnaBet</span>  é a unica com  mais 4.000 possibilidades para  <span style="color: rgb(255, 0, 0);"> multiplicar&nbsp;sua&nbsp;banca!!</span></h1>
+                <P>Deposito mínimo R$1,00</P>
                 <button>
                     <a
                         href="https://onabet.com/signup?btag=CX-96112_573614&brand=onabet&bta=96112&utm_campaign=casameta">CADASTRE-SE
                         AGORA</a>
                 </button>
             </div>
-
         </div>
     </section>
     <section class="beneficios">
