alterando css pela milesima vez!

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <P>Deposito mínimo R$1,00</P>
                 <button>
                     <a
-                        href="https://onabet.com/signup?btag=CX-96112_573614&brand=onabet&bta=96112&utm_campaign=casameta">CADASTRE-SE
+                        href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai">CADASTRE-SE
                         AGORA</a>
                 </button>
             </div>
@@ -45,8 +45,8 @@
                 </ul>
                 <button>
                     <a
-                        href="https://onabet.com/signup?btag=CX-96112_573614&brand=onabet&bta=96112&utm_campaign=casameta">CADASTRE-SE
-                        AGORA</a>
+                    href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai">CADASTRE-SE
+                    AGORA</a>
                 </button>
             </div>
         </div>
