alterando css pela milesima vez!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="home">
         <div class="home-conteiner">
             <div class="home-content">
-                <img src="img/1.webp" alt="Grupo Octor">
+                <img src="img/carlinhos onabet.png" alt="Grupo Octor">
             </div>
             <div class="home-description">
                 <h1><span style="color: rgb(255, 0, 0);">OnaBet</span>  é a unica com  mais 4.000 possibilidades para  <span style="color: rgb(255, 0, 0);"> multiplicar&nbsp;sua&nbsp;banca!!</span></h1>
@@ -31,7 +31,7 @@
     <section class="beneficios">
         <div class="beneficios-conteiner">
             <div class="beneficios-content">
-                <img src="img/2.webp" alt="grupo">
+                <img src="img/onabet mulher influencer.png" alt="grupo">
             </div>
             <div class="beneficios-description">
                 <h2>BENEFICIOS DA ONABET:</h2>
