--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Collective Style Website</title>
+    <title>ONABET a melhor do mundo!</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -15,11 +15,11 @@
     <section class="home">
         <div class="home-conteiner">
             <div class="home-content">
-                <img src="img/carlinhos onabet.png" alt="Grupo Octor">
+                <img src="img/fundodama.webp" alt="Grupo Octor">
             </div>
             <div class="home-description">
-                <h1><span style="color: rgb(255, 0, 0);">OnaBet</span>  é a unica com  mais 4.000 possibilidades para  <span style="color: rgb(255, 0, 0);"> multiplicar&nbsp;sua&nbsp;banca!!</span></h1>
-                <P>Deposito mínimo R$1,00</P>
+                <h1>Junte-se ao<span style="color: rgb(255, 0, 0);">melhor grupo de Aviator</span>  e ganhe acesso exclusivo a lives diárias!!</h1>
+                <P>  <span style="color: rgb(255, 0, 0);"> Vem com a melhor!</span>/P>
                 <button>
                     <a
                         href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai">CADASTRE-SE
@@ -51,7 +51,23 @@
             </div>
         </div>
     </section>
-    <script src="script.js"></script>
+    <section class="provas-sociais">
+        <div class="carousel-titulo">
+            <h2>QUEM ESTÁ DENTRO DO GRUPO FALA:</h2>
+        </div>
+        <div class="carousel">
+            <div class="carousel-track">
+                <div class="carousel-item"><img src="img/1.png" alt="Imagem 1"></div>
+                <div class="carousel-item"><img src="img/2.png" alt="Imagem 2"></div>
+                <div class="carousel-item"><img src="img/3.png" alt="Imagem 3"></div>
+                <div class="carousel-item"><img src="img/4.png" alt="Imagem 4"></div>
+                <div class="carousel-item"><img src="img/5.png" alt="Imagem 5"></div>
+                <div class="carousel-item"><img src="img/6.png" alt="Imagem 6"></div>
+            </div>
+        </div>
+    </section>
+    
+    <script src="js/script.js"></script>
 
 </body>
 
