--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <section class="home">
         <div class="home-conteiner">
             <div class="home-content">
-                <img src="img/fundodama.webp" alt="Grupo Octor">
+                <img src="img/fundomahome.png" alt="Grupo Octor">
             </div>
             <div class="home-description">
                 <h1>Junte-se ao<span style="color: rgb(255, 0, 0);">melhor grupo de Aviator</span>  e ganhe acesso exclusivo a lives diárias!!</h1>
-                <P>  <span style="color: rgb(255, 0, 0);"> Vem com a melhor!</span>/P>
+                <P>  <span style="color: rgb(255, 0, 0);"> Vem com a melhor!</span></P>
                 <button>
                     <a
                         href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai">CADASTRE-SE
@@ -30,42 +30,25 @@
     </section>
     <section class="beneficios">
         <div class="beneficios-conteiner">
-            <div class="beneficios-content">
-                <img src="img/onabet mulher influencer.png" alt="grupo">
-            </div>
             <div class="beneficios-description">
-                <h2>BENEFICIOS DA ONABET:</h2>
-                <ul>
-                    <li>PLATAFORMA 100% REGULAMENTADA AQUI NO BRASIL</li>
-                    <li>SAQUE CAI NA HORA</li>
-                    <li>SAQUE A VONTADE, TODOS OS SAQUES SÃO ILIMITADOS</li>
-                    <li>DEPOSITO MÍNIMO DE 1 REAL</li>
-                    <li>NÃO PRECISA VERIFICAR CONTA</li>
-                    <li>TEM TODOS OS JOGOS</li>
-                </ul>
+                <h2>QUEM ESTÁ DENTRO DO GRUPO FALA:</h2>
+                <div class="carousel-track">
+                    <div class="carousel-item"><img src="img/1.png" alt="Imagem 1"></div>
+                    <div class="carousel-item"><img src="img/2.png" alt="Imagem 2"></div>
+                    <div class="carousel-item"><img src="img/3.png" alt="Imagem 3"></div>
+                    <div class="carousel-item"><img src="img/4.png" alt="Imagem 4"></div>
+                    <div class="carousel-item"><img src="img/5.png" alt="Imagem 5"></div>
+                    <div class="carousel-item"><img src="img/6.png" alt="Imagem 6"></div>
+                </div>
                 <button>
                     <a
                     href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai">CADASTRE-SE
                     AGORA</a>
                 </button>
+            </section>
             </div>
         </div>
-    </section>
-    <section class="provas-sociais">
-        <div class="carousel-titulo">
-            <h2>QUEM ESTÁ DENTRO DO GRUPO FALA:</h2>
-        </div>
-        <div class="carousel">
-            <div class="carousel-track">
-                <div class="carousel-item"><img src="img/1.png" alt="Imagem 1"></div>
-                <div class="carousel-item"><img src="img/2.png" alt="Imagem 2"></div>
-                <div class="carousel-item"><img src="img/3.png" alt="Imagem 3"></div>
-                <div class="carousel-item"><img src="img/4.png" alt="Imagem 4"></div>
-                <div class="carousel-item"><img src="img/5.png" alt="Imagem 5"></div>
-                <div class="carousel-item"><img src="img/6.png" alt="Imagem 6"></div>
-            </div>
-        </div>
-    </section>
+   
     
     <script src="js/script.js"></script>
 
