--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <P>  <span style="color: rgb(255, 0, 0);"> Vem com a melhor!</span></P>
                 <button>
                     <a
-                        href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai">CADASTRE-SE
+                        href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
                         AGORA</a>
                 </button>
             </div>
@@ -42,9 +42,11 @@
                 </div>
                 <button>
                     <a
-                    href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai">CADASTRE-SE
+                    href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
                     AGORA</a>
                 </button>
+            </div>
+        </div>
             </section>
 
    
