--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONABET a melhor do mundo!</title>
+    <title>Dama do Aviator</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 </head>
-
 <body>
     <section class="home">
         <div class="home-conteiner">
@@ -18,11 +17,11 @@
                 <img src="img/fundomahome.png" alt="Grupo Octor">
             </div>
             <div class="home-description">
-                <h1>Junte-se ao <span style="color: rgb(255, 0, 0);">melhor grupo de Aviator</span>  e ganhe acesso exclusivo a lives diárias!!</h1>
-                <P>  <span style="color: rgb(255, 0, 0);"> Vem com a melhor!</span></P>
+                <h1>Junte-se ao <span style="color: rgb(255, 0, 0);">melhor grupo de Aviator</span> e ganhe acesso
+                    exclusivo a lives diárias!!</h1>
+                <P> <span style="color: rgb(255, 0, 0);"> Vem com a melhor!</span></P>
                 <button>
-                    <a
-                        href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
+                    <a href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
                         AGORA</a>
                 </button>
             </div>
@@ -41,17 +40,13 @@
                     <div class="carousel-item"><img src="img/6.png" alt="Imagem 6"></div>
                 </div>
                 <button>
-                    <a
-                    href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
-                    AGORA</a>
+                    <a href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
+                        AGORA</a>
                 </button>
             </div>
         </div>
-            </section>
-
-   
-    
-    <script src="js/script.js"></script>
+    </section>
+<script src="js/script.js"></script>
 
 </body>
 
