--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     exclusivo a lives diárias!!</h1>
                 <P> <span style="color: rgb(255, 0, 0);"> Vem com a melhor!</span></P>
                 <button>
-                    <a href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
+                    <a href="https://t.me/+ReJMMKj4F8I5ZjMx">CADASTRE-SE
                         AGORA</a>
                 </button>
             </div>
@@ -40,7 +40,7 @@
                     <div class="carousel-item"><img src="img/6.png" alt="Imagem 6"></div>
                 </div>
                 <button>
-                    <a href="https://onabet.cxclick.com/visit/?bta=96112&nci=5344&utm_campaign=kwai&utm_medium=kwai">CADASTRE-SE
+                    <a href="https://t.me/+ReJMMKj4F8I5ZjMx">CADASTRE-SE
                         AGORA</a>
                 </button>
             </div>
